2018-08-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1099

	* src/m_rte.cc (iyEmissionStandard, yCalc): Switched from using
	FOR_ANALYTICAL_JACOBIANS_DO to using FOR_ANALYTICAL_JACOBIANS_DO2
	when setting j_analytical_do.

	Before this change surface jacobians came out as all zeros if
	there was no atmospheric quantity retrieved. Now it seems
	surface-only retrievals should work.

2018-08-23  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1098

	* m_rte.cc(yCalcAppend):
	- Add surface quantities to check for equality of retrieval
	  quantities.

2018-08-21  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1097

	* controlfiles/instruments/mviri/{TestMVIRI.arts,
	TestMVIRI.ybatch_MET2_6e8_fastREFERENCE.xml.gz},
	controlfiles/instruments/seviri/{TestSEVIRI.arts,
	TestSEVIRI.ybatch_MET9_6e9_fastREFERENCE.xml.gz},

	Remove sensorOff from controlfiles. Update reference files.

	Added a clear note at the top of the file that these calculations
	are untested.

2018-08-14  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1096

	Fixing some annoying bugs

	* src/m_checked.cc:  removed a removed method from missing
	methods warning

	* src/rational.cc: isUndefined is no caught inside toIndex()
	Should instead this be considered a developer bug and the
	error be thrown elsewhere?

	* src/zeemandata.cc:  Now actively checks for Hund-case
	being set for standard initialization...

2018-08-14  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1095
	
	* src/linerecord.cc:  Removed warning as it is fixed now
	
	* src/m_wigner.cc,methods.cc:  Added methods to set only 
	wigner 3 symbols
	
	* src/wigner_functions.cc,h:  Added checks to see if the 
	library is in the state we expect it to be in.  This is
	a very non-ARTS way of doing things so that ReadXML does
	not break.  These checks are good to use even for others
	that call and use the wigner-library (only line mixing
	so far)
	
	* src/zeemandata.cc:  Now runs one of said check
